--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Karen Schoellkopf | Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>body { background: #f9f9f9; } .hero { padding: 80px 0; text-align: center; background: #fff; } .nav-link.active { font-weight: bold; }</style>
+  <style>body { background: #f9f9f9; min-height: 100vh; display: flex; flex-direction: column; } .hero { padding: 80px 0; text-align: left; background: #fff; flex: 1; } .nav-link.active { font-weight: bold; }</style>
 </head>
 <body>
 
@@ -18,7 +18,6 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
@@ -29,8 +28,7 @@
   <section class="hero">
     <div class="container">
       <h1 class="display-4">Karen Schoellkopf</h1>
-      <p class="lead">Founder • Product Technologist • Problem Solver • Speaker</p>
-      <style>text-align: left</style>
+      <p class="lead">Founder • Product Technologist • Problem Solver • Speaker • Citizen</p>
       <p>Creating practical solutions at the intersection of technology, business, policy, and human experience.</p>
       <p>Karen Schoellkopf is the Founder of Leap Fund. She led Leap Fund as CEO for 7 years, and transitioned to Leap Fund’s Advisory in late 2024. She is a product strategist and end-to-end product lead. She’s worked on projects for Samsung, Target, Verizon, Meetup, Spotify, the American Medical Association, and more, and led Product at VoteRunLead (which trains women to run for office). She received her MFA from the School of Visual Arts, and her BA from Binghamton University. She is a Fellow at Sterling Network, whose mission is to enhance economic mobility across NYC.</p>
       <br>
