--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact | Karen Schoellkopf</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>body { background: #f9f9f9; } .container { padding-top: 60px; max-width: 700px; } .form-control, .btn { border-radius: 0; }</style>
+  <style>body { background: #f9f9f9; min-height: 100vh; display: flex; flex-direction: column; } .hero { padding: 80px 0; text-align: left; background: #fff; flex: 1; } .nav-link.active { font-weight: bold; }</style>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="index.html">Karen Schoellkopf</a>
@@ -18,26 +17,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
         <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
-  <div class="container">
-    <h1>Contact</h1>
-    <p>Interested in collaborating, learning more about my work, or speaking opportunities? Feel free to get in touch:</p>
-    <p>Email: <a href="mailto:karenschoellkopf@gmail.com">karenschoellkopf@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/karenschoellkopf/" target="_blank">linkedin.com/in/karenschoellkopf</a></p>
-    <p>Twitter: <a href="https://twitter.com/karensch" target="_blank">@karensch</a></p>
-  </div>
-
+  <section class="hero">
+    <div class="container">
+      <h1 class="display-4">Contact</h1>
+      <p class="lead">Let's connect and collaborate.</p>
+      <p>Interested in collaborating, learning more about my work, or speaking opportunities? Feel free to get in touch via <a href="https://www.linkedin.com/in/karenschoellkopf/" target="_blank">LinkedIn</a>.</p>
+    </div>
+  </section>
   <footer class="text-center py-4">
     <p>Made with ❤️ in Brooklyn. &copy; 2025 Karen Schoellkopf</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
